<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cyx测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登 录</string>
    <string name="user_name">用户名</string>
    <string name="password">密    码</string>
    <string name="enter_user_name">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="close">关 闭</string>
    <string name="ok">确 定</string>
    <string name="cancel">取 消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="tip">提示信息</string>
    <string name="ip">IP</string>
    <string name="port">端 口</string>
    <string name="save">保 存</string>
    <string name="pro_num">产品编号</string>
    <string name="query">查  询</string>
    <string name="clear">清  空</string>
    <string name="capture_title">条形码/二维码扫描</string>
    <string name="back">返 回</string>
    <string name="light_on">开 灯</string>
    <string name="scan">扫 描</string>
    <string name="light_off">关 灯</string>
    <string name="version">产品信息管理软件--移动端(测试版)</string>
    <string name="query_product">查 询 产 品</string>
    <string name="delivery_register">发 货 登 记</string>
    <string name="nh_develop">佛山市南华仪器股份有限公司研制</string>

</resources>
