<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    tools:context=".UserLoginActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nhlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >
        
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/enter_user_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"  >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    
       <RelativeLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_above="@id/bottom"
           android:layout_alignParentLeft="true"
           android:background="#ffffff"
           android:paddingLeft="@dimen/activity_horizontal_margin"
           android:paddingRight="@dimen/activity_horizontal_margin" >

           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:singleLine="true"
               android:text="@string/txt_version"
               android:textColor="#3592e2"
               android:textSize="20sp" />
       </RelativeLayout>

</LinearLayout>