<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DelRegActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvLoginUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_num"
            android:textColor="#0000ff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etProNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center" >
        
        <Button
            android:id="@+id/btnScan"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/scan"
            android:textColor="@color/btn_txt_white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/query"
            android:textColor="@color/btn_txt_white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/clear"
            android:textColor="@color/btn_txt_white" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" >
    </Space>

    <ListView
        android:id="@+id/lvProInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>