<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/navbar"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/capture_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_control_bluebg" >
            
            <Button
                android:id="@+id/id_open_light"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_transparent"
                style="@style/CaptureButton"
                android:text="@string/light_on" />
            
            <Button
	            android:id="@+id/id_cancel_scan"
	            android:layout_width="100sp"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btn_transparent"
	            style="@style/CaptureButton"
	            android:text="@string/back" />
        </RelativeLayout>

        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/scan_prompt_info"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout> -->
        
    </RelativeLayout>

</FrameLayout>