<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".FunSelActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/tvLoginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:gravity="center"
            android:textSize="20sp"/>
        
                    <Space
                android:layout_width="match_parent"
                android:layout_height="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center" >

            <Button
                android:id="@+id/btnQueryProduct"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/query_product"
                android:textColor="@color/btn_txt_white"
                android:background="@drawable/btn_blue" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <Button
                android:id="@+id/btnDeliveryRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/delivery_register"
                android:textColor="@color/btn_txt_white"
                android:background="@drawable/btn_blue" />
        </LinearLayout>
        
    </LinearLayout>
    
         <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/nh_bottom"
        android:gravity="center"
        android:orientation="horizontal" >

           <Space
               android:layout_width="65sp"
               android:layout_height="match_parent" />

		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nh_develop"
            android:singleLine="true"
            android:textColor="#0c8918"
            android:shadowColor="#ffffff"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />
    </LinearLayout>   

</RelativeLayout>